<resources>
    <string name="app_name">FinTrack</string>
    <string name="lb_choose_user">Choose User</string>
    <string name="lb_adult">Adult</string>
    <string name="lb_kid">Kid</string>
    <string name="lb_fintrack_footer">FinTrack</string>
    <string name="lb_copyrights">2023 All Rights Reserved</string>
    <string name="lb_welcome">Welcome</string>
    <string name="lb_back">Back</string>
    <string name="lb_login">Login To Account</string>
    <string name="lb_hint_email">Email</string>
    <string name="lb_hint_password"> Password </string>
    <string name="lb_forgort_pass"><u>forgot password?</u></string>
    <string name="btn_sign_in">Sign In</string>
    <string name="lb_register"><u>Are you a new user? Register</u></string>
    <string name="lb_newpassword">New Password</string>
    <string name="lb_hint_confirmpassword">Confirm Password</string>
    <string name="btn_confirm">Confirm</string>
    <string name="lb_haveaccount"><u>Have an account? Sign in</u></string>
    <string name="lb_create_account">Create Account</string>
    <string name="btn_register">Register</string>
    <string name="lb_hint_username">Username</string>
    <string name="lb_hint_nic">NIC</string>
    <string name="lb_hint_telephone">Tel</string>
    <string name="lb_hint_workplace">Work Place</string>
    <string name="lb_budget">Budget</string>
    <string name="lb_hint_ramount">Rs.22,000</string>
    <string name="lb_left">left</string>
    <string name="lb_outof">Out of</string>
    <string name="lb_hint_tamount">Rs.50,000</string>
    <string name="btn_budget">+ New budget</string>
    <string name="lb_individual">Individual</string>
    <string name="lb_family">Family</string>
    <string name="lb_setup">Setup</string>
    <string name="lb_calculator">Calculator</string>
    <string name="lb_analytics">Analytics</string>
    <string name="lb_income">Income</string>
    <string name="lb_expenditure">Expenditure</string>
    <string name="lb_subscriptions">Subcriptions</string>
    <string name="lb_availbalance">Available Balance</string>
    <string name="lb_hint_amount">Rs.70,230</string>
    <string name="lb_report">Report</string>
    <string name="lb_transaction">Transaction</string>
    <string name="lb_graph">GRAPH</string>
    <string name="lb_goal">Goal</string>
    <string name="lb_header_user">User</string>
    <string name="lb_username">Nikolas Perera</string>
    <string name="lb_user_email">nikolas@gmail.com</string>
    <string name="btn_edit">Edit</string>
    <string name="lb_feedback">Feedback</string>
    <string name="lb_contactus">Contact Us</string>
    <string name="lb_user_phoneno">077 345 6677</string>
    <string name="lb_nicno">19812050143v</string>
    <string name="lb_logout">Log Out</string>
    <string name="lb_edit_profile">Edit Profile</string>
    <string name="lb_name">Name</string>
    <string name="lb_email">Email</string>
    <string name="lb_tel">Tel</string>
    <string name="lb_nic">NIC</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="lb_header2_feedback">Send us your feedback</string>
    <string name="lb_experience">How was your experience ?</string>
    <string name="btn_send">Send</string>
    <string name="copyright">2023 All Rights Reserved</string>
    <string name="lb_message">Message</string>
    <string name="btn_submit">Submit</string>
    <string name="lb_company_address">No 11, Temple Road, Colombo 5</string>
    <string name="lb_company_mobile">+94 11-245-653</string>
    <string name="lb_company_email">info@FinTrack.com</string>
    <string name="lb_goals">Goals</string>
    <string name="lb_addgoals">Add Goals</string>
    <string name="lb_avb_balance">Goals</string>
    <string name="lb_balance_amt">Rs 188,000</string>
    <string name="lb_savings_for">Savings for</string>
    <string name="lb_travel">Travel</string>
    <string name="lb_shopping">Shopping</string>
    <string name="lb_education">Education</string>
    <string name="lb_users">Users</string>
    <string name="lb_payment">Payment</string>
    <string name="lb_amount">Amount</string>
    <string name="btn_add">Add</string>
    <string name="lb_goal_name">Financial Goal</string>
    <string name="et_hint_goal">eg - Travel</string>
    <string name="et_amount">"eg - 25000.00 "</string>
    <string name="lb_amount_goal">35,000</string>
    <string name="lb_account_balance">Account Balance</string>
    <string name="lb_saving_amount">Saving Amount</string>
    <string name="lb_remain_amount">Remain Amount</string>
    <string name="search_goals">Search Goals</string>
    <string name="lb_wallet">Wallet</string>
    <string name="lb_your_wallet">Your Wallet</string>
    <string name="lb_balance">Balance</string>
    <string name="lb_send">Send</string>
    <string name="lb_addcard">Add Card</string>
    <string name="lb_choose_card">Choose Card</string>
    <string name="tv_cardno">Card No</string>
    <string name="tv_loading_data">Loading Data.....</string>
    <string name="messagingToken">phantomviii</string>
    <string name="messagingSenderId">fintrack-8b72b</string>
    <string-array name="month">
        <item>January 2023</item>
        <item>February 2023</item>
        <item>March 2023</item>
        <item>April 2023</item>
        <item>May 2023</item>
        <item>June 2023</item>
        <item>July 2023</item>
        <item>August 2023</item>
        <item>September 2023</item>
        <item>November 2023</item>
        <item>December 2023</item>
    </string-array>
    <string-array name="payment_for">
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="card_no">
        <item>Card **4466</item>
        <item>Card **8833</item>
    </string-array>
    <string name="lb_newbudget">New Budget</string>
    <string name="btn_create_budget">Create Budget</string>
    <string name="lb_current_budget">Current Budget</string>
    <string name="lb_expenses">Expenses</string>
    <string name="lb_budget_card_expvalue">Rs 50,000</string>
    <string name="lb_budget_card_savval">Rs 220,000</string>
    <string name="lb_budget_cardday">30 days</string>
    <string name="btn_set">Set</string>
    <string name="lb_select_budget">Select Budget</string>
    <string name="lb_starter">Starter</string>
    <string name="lb_monthly_expense">Monthly Expense</string>
    <string name="lb_newbudget_card_expvalue1">Rs 40,000 / month</string>
    <string name="lb_newbudget_card_savval1">Rs 230,000 / month</string>
    <string name="lb_newbudget_card_monexpval2">Rs 60,000 / month</string>
    <string name="lb_newbudget_card_savval2">Rs 210,000 / month</string>
    <string name="lb_newbudget_cardh2">Recomended</string>
    <string name="lb_incpgcardval">Rs 250,000</string>
    <string name="lb_february">February</string>
    <string name="lb_year">2023</string>
    <string name="lb_saving_divider">Savings |</string>
    <string name="lb_expense_divider">Expenses |</string>
    <string name="lb_add_income">Add Income</string>
    <string name="lb_update_income">Update Income</string>
    <string name="lb_add_expense">Add Expense</string>
    <string name="lb_update">Update Expense</string>
    <string name="lb_category">Category</string>
    <string name="lb_date">Date</string>
    <string name="lb_add_subscription">Add Subscription</string>
    <string name="lb_expense">Expense</string>
    <string name="lb_saving">Savings</string>
    <string name="ln_netflix">Netflix</string>
    <string name="lb_entertainment">Entertainment</string>
    <string name="lb_cashreceived">Cash Received</string>
    <string name="lb_hint_fund_transfer">Fund Transfer</string>
    <string name="lb_hint_value_6">Rs 20,000</string>
    <string name="lb_hint_cash_received">Cash Received</string>
    <string name="lb_hint_investment">Investments</string>
    <string name="lb_hint_date">22/02/2023</string>
    <string name="lb_hint_date2">25/02/2023</string>
    <string name="lb_hint_value3">Rs15,000</string>
    <string name="lb_hint_date3">18/02/2023</string>
    <string name="lb_value2">Rs 70,000</string>
    <string name="lb_hint_value5">Rs 180,000</string>
    <string name="lb_days">Days</string>
    <string name="lb_hint_sub1">Netflix</string>
    <string name="lb_hint_sub2">Spotify</string>
    <string name="lb_hint_entertainment">Entertainment</string>
    <string name="lb_value_hint7">Rs 1,200</string>
    <string name="lb_keells">Keells</string>
    <string name="lb_hint_grocery">Grocery</string>
    <string-array name="date">
        <item>January 2023</item>
        <item>February 2023</item>
        <item>March 2023</item>
        <item>April 2023</item>
        <item>May 2023</item>
        <item>June 2023</item>
        <item>July 2023</item>
        <item>August 2023</item>
        <item>September 2023</item>
        <item>November 2023</item>
        <item>December 2023</item>
         
    </string-array>
    <string-array name="categoryincome">
        <item>Investments</item>
        <item>Fund Transfer</item>
        <item>Bank savings interest</item>
        <item>current account interest</item>
        <item>debtors</item>
        <item>Rental Income</item>
        <item>Freelance Earnings</item>
         
    </string-array>
    <string-array name="categoryexpense">
        <item>Entertainment</item>
        <item>Grocery</item>
        <item>Shopping</item>
        <item>Transport</item>
        <item>Food</item>
        <item>Medical Expenses</item>
        <item>Utilities</item>
         
    </string-array>
    <string name="lb_hint_subname">Name</string>
    <string name="lb_hint_subcategory">category</string>
    <string name="lb_hint_subpayment">Payment</string>
    <string name="lb_hint_subdate">Amount</string>
    <string name="lb_hint_users">Users / 01</string>
    <string name="lb_hint_value4">Rs 500 / month</string>
    <string name="lb_hint_value6">Rs 1,200 / month</string>
    <string name="lb_hint_sub1net">Netflix</string>
    <string name="lb_hint_sub2spot">Spotify</string>
    <string name="lb_loading">Loading.....</string>
    <string name="lb_spend">Spend</string>
    <string name="lb_save">Save</string>
    <string name="hint_amount">Amount</string>
    <string name="lb_piggyBank">My Piggy Bank</string>
    <string name="hint_lb_amount">Rs.XXXX</string>
    <string name="lb_kid_details">Kid Details</string>
    <string name="hint_edt_name">Enter your name</string>
    <string name="hint_edt_age">Enter your age</string>
    <string name="hint_edt_grade">Enter your grade</string>
    <string name="hint_edt_school">Enter your school</string>
    <string name="lb_age">Age</string>
    <string name="lb_grade">Grade</string>
    <string name="lb_school">School</string>
    <string name="lb_add_kid">Add Kid</string>
    <string name="lb_set_up_family">Set Up a Family Plan</string>
    <string name="lb_existing_users">Existing Users</string>
    <string name="lb_search">Search User</string>
    <string name="btn_add_user">Add User</string>
    <string name="lb_add_user">Add User</string>
    <string name="lb_work_place">Work Place</string>
    <string name="lb_occ">Occupation</string>
    <string name="hint_enter_un">Enter your Username</string>
    <string name="hint_enter_occ">Enter your Occupation</string>
    <string name="lb_mail">Email</string>
    <string name="hint_edt_mail">Enter your Email</string>
    <string name="lb_pw">Password</string>
    <string name="hint_edt_pwd">Enter your Password</string>
    <string name="hint_edt_nic">Enter NIC</string>
    <string name="hint_edt_tel">Enter your Contact Number</string>
    <string name="lb_workplace">Work Place</string>
    <string name="hint_edt_workplace">Enter you work place</string>
    <string name="lb_user_details">User Details</string>
    <string name="hint_name">name</string>
    <string name="hint_age">age</string>
    <string name="hint_grade">grade</string>
</resources>